Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h

#define MAX_AXIS        48
#define MAX_AXIS        32
#define MAX_AXIS        48
#define MAX_AXIS        32
#define ALL_AXES        (-1)
#define EW_NODLL        (-15)           
#define EW_BUS          (-11)           
#define EW_SYSTEM2      (-10)           
#define EW_HSSB         (-9)            
#define EW_HANDLE       (-8)            
#define EW_VERSION      (-7)            
#define EW_UNEXP        (-6)            
#define EW_SYSTEM       (-5)            
#define EW_PARITY       (-4)            
#define EW_MMCSYS       (-3)            
#define EW_RESET        (-2)            
#define EW_BUSY         (-1)            
#define EW_OK           0               
#define EW_FUNC         1               
#define EW_NOPMC        1               
#define EW_LENGTH       2               
#define EW_NUMBER       3               
#define EW_RANGE        3               
#define EW_ATTRIB       4               
#define EW_TYPE         4               
#define EW_DATA         5               
#define EW_NOOPT        6               
#define EW_PROT         7               
#define EW_OVRFLOW      8               
#define EW_PARAM        9               
#define EW_BUFFER       10              
#define EW_PATH         11              
#define EW_MODE         12              
#define EW_REJECT       13              
#define EW_DTSRVR       14              
#define EW_ALARM        15              
#define EW_STOP         16              
#define EW_PASSWD       17              
#define DNC_NORMAL	(-1)		
#define DNC_CANCEL	(-32768)	
#define DNC_OPENERR	(-514)		
#define DNC_NOFILE	(-516)		
#define DNC_READERR	(-517)		
typedef struct odbact {
    short   dummy[2] ;  
    long    data ;      
} ODBACT ;
typedef struct odbact2 {
	 short	datano;		
	 short	type;		
	 long	data[MAX_SPINDLE];	
} ODBACT2 ;
typedef struct odbaxis {
    short   dummy ;             
    short   type ;              
    long    data[MAX_AXIS] ;    
} ODBAXIS ;
typedef struct odbdy {
    short   dummy ;
    short   axis ;      
    short   alarm ;     
    short   prgnum ;    
    short   prgmnum ;   
    long    seqnum ;    
    long    actf ;      
    long    acts ;      
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY ;
typedef struct odbdy2 {
    short   dummy ;
    short   axis ;       
    long    alarm ;      
    long    prgnum ;     
    long    prgmnum ;    
    long    seqnum ;     
    long    actf ;       
    long    acts ;       
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY2 ;
typedef struct idbwrr {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRR;
typedef struct idbwra {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRA;
typedef struct iodbovl {
    short   datano;             
    short   type;               
    long    data[2][MAX_AXIS];  
} IODBOVL;
typedef struct odbspn {
    short   datano;     
    short   type;       
    short   data[MAX_SPINDLE];    
} ODBSPN;
typedef struct poselm {
    long    data;       
    short   dec;        
    short   unit;       
    short   disp;       
    char    name;       
    char    suff;       
} POSELM;
typedef struct odbpos {
    POSELM  abs;        
    POSELM  mach;       
    POSELM  rel;        
    POSELM  dist;       
} ODBPOS ;
typedef struct speedelm {
    long    data;       
    short   dec;        
    short   unit;       
    short   disp;       
    char    name;       
    char    suff;       
} SPEEDELM ;
typedef struct odbspeed {
    SPEEDELM    actf;   
    SPEEDELM    acts;   
} ODBSPEED ;
typedef struct loadelm {
    long    data;       
    short   dec;        
    short   unit;       
    char    name;       
    char    suff1;      
    char    suff2;      
    char    reserve;    
} LOADELM ;
typedef struct odbsvload {
    LOADELM svload;     
} ODBSVLOAD ;
typedef struct odbspload {
    LOADELM spload;     
    LOADELM spspeed;    
} ODBSPLOAD ;
typedef struct odbcss {
    long    srpm;       
    long    sspm;       
    long    smax;       
} ODBCSS;
typedef struct prgpnt {
    long    prog_no;    
    long    blk_no;     
} PRGPNT;
typedef struct odbdncdgn {
    short          ctrl_word;
    short          can_word;
    char           nc_file[16];
    unsigned short read_ptr;
    unsigned short write_ptr;
    unsigned short empty_cnt;
    unsigned long  total_size;
} ODBDNCDGN;
typedef struct odbup {
    short   dummy[2] ;  
    char    data[256] ; 
} ODBUP ;   
typedef struct odbbuf {
    short   dummy[2] ;  
    short   data ;      
} ODBBUF ;
typedef struct prgdir {
    char    prg_data[256] ; 
} PRGDIR ;  
typedef struct odbnc {
    union {
        struct {
            short   reg_prg ;       
            short   unreg_prg ;     
            long    used_mem ;      
            long    unused_mem ;    
        } bin ;             
        char    asc[31] ;   
    } u ;
} ODBNC ;
typedef struct odbpro {
    short   dummy[2] ;  
    short   data ;      
    short   mdata ;     
} ODBPRO ;
typedef struct odbseq {
    short   dummy[2] ;  
    long    data ;      
} ODBSEQ ;
typedef struct hspinfo {
	char prminfo[8][16];
} HSPINFO;
typedef union hspdata {
	char    cdata[MAX_AXIS];
	short   idata[MAX_AXIS];
	long    ldata[MAX_AXIS];
        REALPRM rdata[MAX_AXIS];
} HSPDATA;
typedef union hspdata {
	char    cdata[MAX_AXIS];
	short   idata[MAX_AXIS];
	long    ldata[MAX_AXIS];
} HSPDATA;
typedef struct odbproo8 {
     short   dummy[2] ;  
     long    data ;      
     long    mdata ;     
} ODBPROO8 ;
typedef struct odbpos {
	short	idata;	
	long	ldata;	
} ODBPOS;
FWLIBAPI short WINAPI cnc_actf( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_absolute( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_machine( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_distance( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_skip( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_srvdelay( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_accdecdly( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rddynamic( unsigned short, short, short, ODBDY * ) ;
FWLIBAPI short WINAPI cnc_acts( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_acts2( unsigned short, short, ODBACT2 * ) ;
FWLIBAPI short WINAPI cnc_wrrelpos( unsigned short, short, IDBWRR * ) ;
FWLIBAPI short WINAPI cnc_prstwkcd( unsigned short, short, IDBWRA * ) ;
FWLIBAPI short WINAPI cnc_rdmovrlap( unsigned short, short, short, IODBOVL * ) ;
FWLIBAPI short WINAPI cnc_rdspload( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_rdspmaxrpm( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_rdspgear( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_absolute2( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative2( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rdposition( unsigned short, short, short *, ODBPOS * );
FWLIBAPI short WINAPI cnc_rdspeed( unsigned short, short, ODBSPEED * );
FWLIBAPI short WINAPI cnc_rdsvmeter( unsigned short, short *, ODBSVLOAD * );
FWLIBAPI short WINAPI cnc_rdspmeter( unsigned short, short, short *, ODBSPLOAD * );
FWLIBAPI short WINAPI cnc_rdspcss( unsigned short, ODBCSS * );
FWLIBAPI short WINAPI cnc_rdexecpt( unsigned short, PRGPNT *, PRGPNT *) ;
FWLIBAPI short WINAPI cnc_rddncdgndt( unsigned short, ODBDNCDGN * ) ;
FWLIBAPI short WINAPI cnc_upload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_cupload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_buff( unsigned short, ODBBUF * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir( unsigned short, short, short, short, unsigned short, PRGDIR * ) ;
FWLIBAPI short WINAPI cnc_rdproginfo( unsigned short, short, short, ODBNC * ) ;
FWLIBAPI short WINAPI cnc_rdprgnum( unsigned short, ODBPRO * ) ;
FWLIBAPI short WINAPI cnc_rdseqnum( unsigned short, ODBSEQ * ) ;
FWLIBAPI short WINAPI cnc_rdhsprminfo( unsigned short, long, HSPINFO * );
FWLIBAPI short WINAPI cnc_rdhsparam( unsigned short, long, HSPINFO *, HSPDATA * );
#define ODBPRO		ODBPROO8
#define cnc_rdprogdir	cnc_rdprogdiro8
#define cnc_rdprgnum	cnc_rdprgnumo8
#define cnc_rddynamic	cnc_rddynamico8